@@ -24,5 +24,13 @@ module PageObject
     def select_list_element(identifier={:index => 0})
       @platform.select_list_for(identifier)
     end
+
+    def checkbox_element(identifier={:index => 0})
+      @platform.checkbox_for(identifier)
+    end
+
+    def radio_button_element(identifier={:index => 0})
+      @platform.radio_button_for(identifier)
+    end
   end
 end
