@@ -8,6 +8,8 @@
     * HiddenField
     * TextArea
     * SelectList
+    * Checkbox
+    * RadioButton
   * Added #modal_dialog to PageObject to override the default modal dialog behavior
   * Changed element keys to include _webdriver
   * Updated to use selenium-webdriver 2.5.0
